fix(style): reset user-agent padding on inputs, causing invisible content for FDigitsInput on iOS Safari

--- a/styles/generic/reset.styl
+++ b/styles/generic/reset.styl
@@ -18,3 +18,4 @@ img, picture, video, canvas, svg
 
 input, button, textarea, select
   font inherit
+  padding 0
